refactor: cafeteria menus